# iva_2

./: .env.example  .gitignore  .replit  AGENTS.md  BUILD_TEST_RESULTS.md  Dockerfile  FRONTEND_DESIGN_PLAN.md  FRONTEND_ENHANCEMENTS_2025.md  FRONTEND_IMPROVEMENTS.md  IVA3_IMPLEMENTATION_ROADMAP.md  IVA_BRIEFING.md  MANIFEST.in  Makefile  NEXT_STEPS_COMPLETION.md  PITCH_MEMO.md  PRODUCT_VISION.md  PUBLIC_COMPANY_ROADMAP.md  README.md  README.txt  RUNNING_THE_APP.md  TEST_SUITE_SUMMARY.md  UX_TEST_RESULTS.md  docker-compose.yml  pyproject.toml  replit.md  requirements.txt  test_edgar_adapter.py  windsor.tasks.json
attached_assets/: Pasted-Here-are-two-polished-options-you-can-use-Both-keep-your-core-points-sharpen-the-positioning-and--1761268275117_1761268275118.txt  Pasted-Stripe-Inc-Truth-Card-H-0-M-0-L-3-Conf-80-0-marketing-metric-unverified-sev-low-conf-50-1761273621729_1761273621730.txt  Pasted-Subject-Proposal-Iva-Reality-Layer-automate-fintech-claim-verification-in-10-minutes-prototype-1761265192551_1761265192552.txt
data/seeds/: bank_partner_pages.json
scripts/: dev_bootstrap.sh  load_golden.py
src/iva/: cli.py  config.py  logging.py  scheduler.py  server.py
src/iva/adapters/: __init__.py  analyst_coverage.py  bank_partners.py  cfpb.py  earnings_calls.py  edgar.py  edgar_filings.py  fintrac.py  (+7 more)
tests/: test_cfpb_adapter.py
tests/e2e/: test_pipeline.py
tests/unit/: test_alerts.py  test_api.py  test_citations.py  test_claims.py  test_ingestion.py  test_models.py  test_press_metrics.py  test_reconcile.py  test_reconcile_comprehensive.py  test_severity.py
(+32 files in other folders)
